syntax = "proto3";

option csharp_namespace = "Start_Micro_Grpc_Services";

package weather;

service Weather {
  rpc GetForecast (ForecastRequest) returns (ForecastResponse);
}

message ForecastResponse {
  string countryCode = 1;
  string city = 2;
  float temp = 3;
  string desc = 4;
  string wind = 5;
  string icon = 6;
}

message ForecastRequest {
    string cityName = 1;
}

message Empty {
}